# SpectraForge

./: .clangformat  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresetsClang.json  CMakePresetsVs2022.json  README.md
cmake/: HunterGate.cmake
cmake/modules/: spectra_simd.cmake
cmake/toolchains/: ninja-clang-cxx17-c11-avx2.cmake  ninja-clang-cxx17-c11-avx512.cmake  ninja-clang-cxx17-c11-sse2.cmake  ninja-clang-cxx17-c11-sse42.cmake  ninja-clang-cxx17-c11.cmake  ninja-clang-cxx17.cmake  ninja-clang.cmake  vs-17-2022-cxx17-avx2.cmake  vs-17-2022-cxx17-avx512.cmake  vs-17-2022-cxx17-sse2.cmake  vs-17-2022-cxx17.cmake  vs-17-2022-win64-cxx17.cmake
cmake/toolchains/flags/: avx2.cmake  avx512.cmake  sse2.cmake  sse42.cmake
engine/: CMakeLists.txt
engine/include/: Spectra.h  SpectraPredef.h  spectra.h  spectra_math.h  spectra_scene.h
engine/src/: Spectra.c  spectra.c  spectra_predef.h  spectra_scene.c  spectra_scene_priv.h  spectra_simd.h  spectra_system.c  spectra_system.h  spectra_system_simd_avx.c  spectra_system_simd_avx2.c  spectra_system_simd_avx512.c  spectra_system_simd_sse2.c
engine/src/systems/: spectra_systems_sdl2.h
engine/tests/: CMakeLists.txt  SpectraTests.cpp
tools/scripts/: setup-steam-deck.sh
